force-app/main/default/objects/Account/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <description>this field is used to store the company id</description>
    <label>Company Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>