force-app/main/default/objects/Account/fields/Competitor_notes__c.field-meta.xml
<CustomField>
    <fullName>Competitor_notes__c</fullName>
    <description>Competitor/Sales notes from Lead</description>
    <label>Competitor notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>