force-app/main/default/objects/Account/fields/Cont_Franchise_Branches__c.field-meta.xml
<CustomField>
    <fullName>Cont_Franchise_Branches__c</fullName>
    <description>Contacted Franchise Branches</description>
    <label>Cont. Franchise Branches</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>