force-app/main/default/objects/Account/fields/Contact_Log__c.field-meta.xml
<CustomField>
    <fullName>Contact_Log__c</fullName>
    <label>Contact Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>