force-app/main/default/objects/Account/fields/Contribution_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Rate__c</fullName>
    <formula>(Order_Current_Month__c /532958) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>