force-app/main/default/objects/Account/fields/Contribution_Rate_Backend__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Rate_Backend__c</fullName>
    <description>Based on revenue in the current month</description>
    <inlineHelpText>Based on revenue in the current month</inlineHelpText>
    <label>Contribution Rate Backend</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>