force-app/main/default/objects/Account/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <description>Credit Card Number</description>
    <label>Credit Card Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>