force-app/main/default/objects/Account/fields/Credit_Card_Validity_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Validity_Period__c</fullName>
    <description>Credit Card Validity Period</description>
    <inlineHelpText>Credit Card Validity Period</inlineHelpText>
    <label>Credit Card Validity Period</label>
    <type>Date</type>
</CustomField>