force-app/main/default/objects/Account/fields/Declined_Orders_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Declined_Orders_Current_Month__c</fullName>
    <label>Declined Orders - Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>