force-app/main/default/objects/Account/fields/Delivery_Serviceold__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Serviceold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Service</label>
    <type>Checkbox</type>
</CustomField>