force-app/main/default/objects/Account/fields/Delivery_ServicePicklist__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ServicePicklist__c</fullName>
    <description>Information about own delivery service</description>
    <label>Delivery Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Take away only</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>