force-app/main/default/objects/Account/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <description>The time frame when the restaurants deliveries</description>
    <label>Delivery Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>