force-app/main/default/objects/Account/fields/DestinationID__c.field-meta.xml
<CustomField>
    <fullName>DestinationID__c</fullName>
    <description>Talabat Remediation (Oct 2018)</description>
    <label>DestinationID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>