force-app/main/default/objects/Account/fields/Dietary_information__c.field-meta.xml
<CustomField>
    <fullName>Dietary_information__c</fullName>
    <label>Dietary information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal Certified</fullName>
            </value>
            <value>
                <fullName>Non-halal</fullName>
            </value>
            <value>
                <fullName>Pork Free/Muslim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>