force-app/main/default/objects/Account/fields/District_Set_Method__c.field-meta.xml
<CustomField>
    <fullName>District_Set_Method__c</fullName>
    <description>District Set Method</description>
    <label>District Set Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>