force-app/main/default/objects/Account/fields/Dunning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Balance__c</fullName>
    <label>Dunning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>