force-app/main/default/objects/Account/fields/Dunning_Block__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Block__c</fullName>
    <inlineHelpText>A - Dunning block for Key Accounts 
B - Manual block reason B... 
C - Dunning Reason for Capitalization of Overdue Items 
H - Block reason H 
K - Dispute Case 
R - Blocked by invoice verification 
S - Dunning Reason for Deferral 
Z - Promise to Pay</inlineHelpText>
    <label>Dunning Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>