force-app/main/default/objects/Account/fields/Dunning_Level__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Level__c</fullName>
    <label>Dunning Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>