force-app/main/default/objects/Account/fields/Exclude_from__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from__c</fullName>
    <label>Exclude from</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automatic Paper bag supply</fullName>
            </value>
            <value>
                <fullName>Marketing Communication</fullName>
            </value>
            <value>
                <fullName>Polygon Shrinkage</fullName>
            </value>
            <value>
                <fullName>Sanctions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>