force-app/main/default/objects/Account/fields/Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Extension_Number__c</fullName>
    <inlineHelpText>This is the extension number for the &quot;phone&quot; field</inlineHelpText>
    <label>Extension Number</label>
    <type>Phone</type>
</CustomField>