force-app/main/default/objects/Account/fields/External_Sales_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Agency__c</fullName>
    <description>This field is to clarify which External Sales Agency is the owner of this contract</description>
    <label>External Sales Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(광고대행사) 아인스미디어</fullName>
            </value>
            <value>
                <fullName>(광고대행사) 예지솔루션</fullName>
            </value>
            <value>
                <fullName>(광고대행사) 희일커뮤니케이션</fullName>
            </value>
            <value>
                <fullName>P197_어플랜</fullName>
            </value>
            <value>
                <fullName>P198_주식회사세종이노베이션</fullName>
            </value>
            <value>
                <fullName>P201_주식회사포인트이노베이션</fullName>
            </value>
            <value>
                <fullName>P202_시호기획</fullName>
            </value>
            <value>
                <fullName>P207_드림애드</fullName>
            </value>
            <value>
                <fullName>P208_드림라이프</fullName>
            </value>
            <value>
                <fullName>P210_베스트광고기획</fullName>
            </value>
            <value>
                <fullName>P211_주식회사에스에이치인터내셔날</fullName>
            </value>
            <value>
                <fullName>P218_주식회사엔터후</fullName>
            </value>
            <value>
                <fullName>P219_국민전화번호부강동지점</fullName>
            </value>
            <value>
                <fullName>P224_애드플러스</fullName>
            </value>
            <value>
                <fullName>P228_플러스기획</fullName>
            </value>
            <value>
                <fullName>P231_조은미소아이엔지</fullName>
            </value>
            <value>
                <fullName>P235_반디기획</fullName>
            </value>
            <value>
                <fullName>P237_능수기획</fullName>
            </value>
            <value>
                <fullName>P242_애니원기획</fullName>
            </value>
            <value>
                <fullName>P246_참D&amp;P</fullName>
            </value>
            <value>
                <fullName>P249_아이티기획</fullName>
            </value>
            <value>
                <fullName>P254_(주)스마트월드</fullName>
            </value>
            <value>
                <fullName>P257_노랑디자인</fullName>
            </value>
            <value>
                <fullName>P270_스마트애드</fullName>
            </value>
            <value>
                <fullName>P273_에스디피에이디</fullName>
            </value>
            <value>
                <fullName>P276_애드앱</fullName>
            </value>
            <value>
                <fullName>P284_케이.엠.에스</fullName>
            </value>
            <value>
                <fullName>P285_제이앤지기획</fullName>
            </value>
            <value>
                <fullName>P296_훈민기획</fullName>
            </value>
            <value>
                <fullName>P302_용오름기획</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>