force-app/main/default/objects/Account/fields/Facebook_Likes__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Likes__c</fullName>
    <label>Facebook Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>