force-app/main/default/objects/Account/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Record_Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Record_Country__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stalls</relationshipLabel>
    <relationshipName>Stalls</relationshipName>
    <type>Lookup</type>
</CustomField>