force-app/main/default/objects/Account/fields/Facility_surface_area__c.field-meta.xml
<CustomField>
    <fullName>Facility_surface_area__c</fullName>
    <inlineHelpText>Size of the Facility in square meter (m²)</inlineHelpText>
    <label>Facility surface area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>