force-app/main/default/objects/Account/fields/Failed_Orders__c.field-meta.xml
<CustomField>
    <fullName>Failed_Orders__c</fullName>
    <description>Total failed order number</description>
    <inlineHelpText>Total failed order number.</inlineHelpText>
    <label>Failed Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>