force-app/main/default/objects/Account/fields/Failed_Orders_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Failed_Orders_Last_Month__c</fullName>
    <label>Failed Orders Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>