force-app/main/default/objects/Account/fields/Final_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Check_Date__c</fullName>
    <label>Final Check Date</label>
    <type>DateTime</type>
</CustomField>