force-app/main/default/objects/Account/fields/Finance_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Finance_Specifications__c</fullName>
    <label>Finance Specifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Record_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cashless Pre Payment</fullName>
            </value>
            <value>
                <fullName>Pay and Pick Pre Payment</fullName>
            </value>
            <value>
                <fullName>Buy and Sell Model</fullName>
            </value>
            <value>
                <fullName>Block Invoicing</fullName>
            </value>
            <value>
                <fullName>Basket Size Calculation</fullName>
            </value>
            <value>
                <fullName>Order Size Calculation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>