force-app/main/default/objects/Account/fields/Food_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Food_License_Number__c</fullName>
    <label>Food License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>