force-app/main/default/objects/Account/fields/Formatted_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Billing_Address__c</fullName>
    <description>Set by Process builder GLOBAL - Address - Set Account Billing Address, store formatted billing address related to this account.
This address comes from the new address model</description>
    <label>Formatted Billing Address</label>
    <type>TextArea</type>
</CustomField>