force-app/main/default/objects/Account/fields/Formatted_Restaurant_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Restaurant_Address__c</fullName>
    <description>Set by Process builder GLOBAL - Address - Set Account Restaurant Address, store formatted restaurant address related to this account.
This address comes from the new address model</description>
    <label>Formatted Restaurant Address</label>
    <type>TextArea</type>
</CustomField>