force-app/main/default/objects/Account/fields/Formatted_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Shipping_Address__c</fullName>
    <description>Set by Process builder GLOBAL - Address - Set Account Shipping Address, store formatted shipping address related to this account.
This address comes from the new address model</description>
    <label>Formatted Shipping Address</label>
    <type>TextArea</type>
</CustomField>