force-app/main/default/objects/Account/fields/Franchise_Connection__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only use to establish a connection between TWO hierarchies, used mostly for billing transfers on Opportunity level.</description>
    <inlineHelpText>Only use to establish a connection between TWO hierarchies, used mostly for billing transfers on Opportunity level</inlineHelpText>
    <label>Franchise Connection</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Franchise, DH Concept</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Franchise Connection)</relationshipLabel>
    <relationshipName>AccountsFranchise</relationshipName>
    <type>Lookup</type>
</CustomField>