force-app/main/default/objects/Account/fields/Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Type__c</fullName>
    <description>Only use to indicate if a Restaurant is managed via Headquarter or individually in a hierarchy</description>
    <inlineHelpText>Only use to indicate if a Restaurant is managed via Headquarter or individually in a hierarchy</inlineHelpText>
    <label>Franchise Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directly managed</fullName>
            </value>
            <value>
                <fullName>Indirectly managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>