force-app/main/default/objects/Account/fields/FrontEnd_URL__c.field-meta.xml
<CustomField>
    <fullName>FrontEnd_URL__c</fullName>
    <description>Shortcut to Restaurant page on our Frontend</description>
    <label>FrontEnd URL</label>
    <type>Url</type>
</CustomField>