force-app/main/default/objects/Account/fields/Giro__c.field-meta.xml
<CustomField>
    <fullName>Giro__c</fullName>
    <description>Field used only for Chile, Identifies the categorization of the business, which will affect the payment of taxes.</description>
    <label>Giro</label>
    <type>TextArea</type>
</CustomField>