force-app/main/default/objects/Account/fields/GRID__c.field-meta.xml
<CustomField>
    <fullName>GRID__c</fullName>
    <description>GRID</description>
    <externalId>true</externalId>
    <label>GRID</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>