force-app/main/default/objects/Account/fields/GRIDSequence__c.field-meta.xml
<CustomField>
    <fullName>GRIDSequence__c</fullName>
    <description>Account grid sequence, de migration</description>
    <displayFormat>{000000000}</displayFormat>
    <label>GRIDSequence</label>
    <type>AutoNumber</type>
</CustomField>