force-app/main/default/objects/Account/fields/Halal_Certificate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Halal_Certificate_Expiry_Date__c</fullName>
    <label>Halal Certificate Expiry Date</label>
    <type>Date</type>
</CustomField>