force-app/main/default/objects/Account/fields/Has_menu__c.field-meta.xml
<CustomField>
    <fullName>Has_menu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has menu</label>
    <type>Checkbox</type>
</CustomField>