force-app/main/default/objects/Account/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <description>This field is to know when the restaurant does not operate</description>
    <label>Holiday</label>
    <type>TextArea</type>
</CustomField>