force-app/main/default/objects/Account/fields/HQ_Revenue_Yearly_Base__c.field-meta.xml
<CustomField>
    <fullName>HQ_Revenue_Yearly_Base__c</fullName>
    <description>HQ Revenue (Yearly Base)</description>
    <label>HQ Revenue (Yearly Base)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>