force-app/main/default/objects/Account/fields/Hygiene_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Rating__c</fullName>
    <label>Hygiene Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>