force-app/main/default/objects/Account/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>International Bank Account Number. Start with 2 letters (country code) then max 32 digits follow</description>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>