force-app/main/default/objects/Account/fields/Inactive_since__c.field-meta.xml
<CustomField>
    <fullName>Inactive_since__c</fullName>
    <description>temporarily field for taken offline (AU)</description>
    <label>Inactive since</label>
    <type>Date</type>
</CustomField>