force-app/main/default/objects/Account/fields/Interbank_Account_Code_IAC__c.field-meta.xml
<CustomField>
    <fullName>Interbank_Account_Code_IAC__c</fullName>
    <label>Interbank Account Code (IAC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>